@@ -14,6 +14,7 @@ Bugfixes:
 * Fixed encoding for square brackets and less/greater than characters
 * Don't apply rewrite rule to requests forwarded by URL-mappings anymore
 * Fixed encoding/decoding of vertical bar (|) character
+* Fixed bug that caused mappings to also match viewIds of other mappings (#128)
 
 ------------------------------------
            VERSION 3.3.2
